# facecursor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  notes.md  setup.bash
docs/: derivation.md
include/: cascade.h  click_processor.h  constants.h  cursor_linux.h  cursor_mac.h  face_to_cursor.h  landmark.h  pointer_webcam.h  utils.h
include/extras/: cascade_yu_test.h
src/: cascade.cpp  click_processor.cpp  cursor_linux.cpp  cursor_mac.cpp  face_to_cursor.cpp  landmark.cpp  pointer_webcam.cpp
src/extras/: cascade_yu_test.cpp
